--- a/src/main/java/app/netlify/spkisp_ramdani/panels/PanelMenu.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/panels/PanelMenu.form
@@ -270,7 +270,7 @@
             </Component>
             <Component class="com.k33ptoo.components.KButton" name="bProfil">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Profil"/>
+                <Property name="text" type="java.lang.String" value="Akun"/>
                 <Property name="horizontalAlignment" type="int" value="2"/>
                 <Property name="horizontalTextPosition" type="int" value="2"/>
               </Properties>
