--- a/src/main/java/app/netlify/spkisp_ramdani/panels/PanelEditData.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/panels/PanelEditData.form
@@ -109,7 +109,7 @@
         </Component>
         <Component class="com.k33ptoo.components.KButton" name="kButton2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Tambah"/>
+            <Property name="text" type="java.lang.String" value="Simpan"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="kButton2ActionPerformed"/>
